--- a/haystack-rest-api/src/pipelines/requirements.txt
+++ b/haystack-rest-api/src/pipelines/requirements.txt
@@ -1,5 +1,5 @@
 accelerate==0.31.0
-anyio==4.4.0
+anyio==3.7.1
 appdirs==1.4.4
 attrs==23.2.0
 backoff==2.2.1
@@ -8,16 +8,19 @@ boilerpy3==1.0.7
 cattrs==23.2.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
+click==8.1.7
 docopt==0.6.2
 elastic-transport==7.16.0
 elasticsearch==7.17.9
 Events==0.5
 exceptiongroup==1.2.1
 farm-haystack==1.25.5
+fastapi==0.104.0
 filelock==3.13.1
 fsspec==2024.2.0
 h11==0.14.0
 httpcore==1.0.5
+httptools==0.6.1
 httpx==0.27.0
 huggingface-hub==0.23.4
 idna==3.7
@@ -50,6 +53,7 @@ nvidia-nvtx-cu11==11.8.86
 packaging==24.1
 pandas==2.0.3
 pillow==10.3.0
+pkg_resources==0.0.0
 pkgutil_resolve_name==1.3.10
 platformdirs==4.2.2
 posthog==3.5.0
@@ -57,6 +61,8 @@ prompthub-py==4.0.0
 psutil==6.0.0
 pydantic==1.10.16
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.6
 pytz==2024.1
 PyYAML==6.0.1
 quantulum3==0.9.1
@@ -72,6 +78,7 @@ scipy==1.10.1
 six==1.16.0
 sniffio==1.3.1
 sseclient-py==1.8.0
+starlette==0.27.0
 sympy==1.12
 tenacity==8.4.1
 threadpoolctl==3.5.0
@@ -86,5 +93,9 @@ typing_extensions==4.12.2
 tzdata==2024.1
 url-normalize==1.4.3
 urllib3==1.26.19
+uvicorn==0.23.2
+uvloop==0.19.0
+watchfiles==0.22.0
+websockets==12.0
 xformers==0.0.26.post1
 zipp==3.19.2
