--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,17 @@ t_env
 /z_del_1
 /z_del_2
 /z_del_3
+/index_data/wiki_docs.json
+/index_data/crawled_docs.json
+/index_data/wikipedia/elwiki-20240501-pages-articles-multistream.txt
+/index_data/wikipedia/elwiki-20240501-pages-articles-multistream.xml.bz2
+/index_data/wikipedia/testfile.txt
+/index_data/wikipedia/top_k_mean_scores_plot.png
+/test_venv
+/venv
+/dev/meltemi_env
+/dev/experiments
+/dev/evaluation/reports
+file-upload/
+/dev/requirements.txt
+
