cloned and incorporate latest changes after large files commit problem

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,17 @@
-/data/deepset_covid_qa
-/data/npho
-/data/xquad-el
-/data/wiki
-/system/experiments
-/system/meltemi_env
-/system/qavenv
-/haystack
+
+/dev
 /mlruns
-/qavenv
-rest_api/rest_api/pipeline
+
 .gitignore
-haystack-rest-api/test_venv
 __pycache__
-t_env
+/venv
+
+
 /z_del_1
 /z_del_2
 /z_del_3
-/index_data/wiki_docs.json
-/index_data/crawled_docs.json
-/index_data/wikipedia/elwiki-20240501-pages-articles-multistream.txt
-/index_data/wikipedia/elwiki-20240501-pages-articles-multistream.xml.bz2
-/index_data/wikipedia/testfile.txt
-/index_data/wikipedia/top_k_mean_scores_plot.png
-/test_venv
-/venv
-/dev/meltemi_env
-/dev/experiments
-/dev/evaluation/reports
-file-upload/
-/dev/requirements.txt
 
+*bz2
+/file-upload
+
+/dev/data
