--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # haystack
-farm-haystack[inference,elasticsearch,preprocessing,crawler,file-conversion]==1.25.5
+farm-haystack[inference,elasticsearch,preprocessing,crawler,file-conversion,metrics]==1.25.5
 
 fastapi==0.104.0
 uvicorn[standard]==0.23.2
