--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,8 @@ services:
       retries: 10
 
   haystack:
-
     build:
       context: .
-      dockerfile: DockerfileHaystack
     ports:
       - 8000:8000
     restart: on-failure
@@ -37,3 +35,9 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cat/health || exit 1"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
